--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,9 +48,9 @@ h1, h2, h3 {
 h1 { font-size: 2.8em; line-height: 1.2; }
 h2 {
     font-size: 2.2em;
-    padding-top: 1.5em;
-    margin-top: 1em;
-    margin-bottom: 1.2em;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 1em;
     text-align: center;
     position: relative;
 }
@@ -84,7 +84,7 @@ ul {
 
 /* Helper Classes */
 .section-padding {
-    padding: 5rem 0;
+    padding: 1.5rem 0;
 }
 .alt-bg {
     background-color: var(--light-bg);
@@ -237,7 +237,7 @@ header .header-content .mobile-menu-toggle {
 /* Hero Section */
 .hero {
     background-color: var(--light-blue-bg);
-    padding: 5rem 0;
+    padding: 2.5rem 0;
     text-align: center;
     min-height: 80vh;
     display: flex;
